[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-arkanoid"
version = "0.1.0"
description = "A music-based Arkanoid game"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pygame",
    "pymunk",
    "numpy",
    "soundfile",
    "sounddevice",
    "librosa",
]

